--- a/wercker.yml
+++ b/wercker.yml
@@ -1,3 +1,5 @@
+box: wercker/ruby
+
 build:
     steps:
       - wercker/install-packages@0.0.4
@@ -18,17 +20,8 @@ deploy:
       - create-file:
           name: Create private key
           filename: $PRIVATEKEY_PATH
-          content: $DEPROY_KEY_PRIVATE
+          content: $DEPLOY_KEY_PRIVATE
           overwrite: true
-
-      # デプロイ前に不要なファイルを削除
-      - script: 
-          name: Remove no need assets
-          code: |
-           rm -rf CNAME
-           rm -rf .gitignore
-           rm -rf hexo-rpp-negativewords.txt
-           rm -rf wercker.yml
 
       # 「/pipeline/source/」ディレクトリにソースがあるのでそれをtar + sshでサーバーに転送
       - script:
