--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
   "dependencies": {},
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run lint && npm run cover",
+    "lint": "eslint *.js",
+    "_comment": "istanbulコマンドでmochaも実行している",
+    "cover": "NODE_ENV=test istanbul cover --report text _mocha",
+    "mocha": "NODE_ENV=test mocha"
+  },
+  "devDependencies": {
+    "eslint": "^2.5.3",
+    "istanbul": "^0.4.3",
+    "mocha": "^2.4.5",
+    "should": "^8.3.0"
   },
   "author": "",
   "license": "ISC"
