--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -14,24 +14,23 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
 
-    working_directory: ~/app
+    working_directory: ~/app/
 
     steps:
       - checkout
 
-      # Download and cache dependencies
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+        key: dependency-cache-{{ checksum "package.json" }}
 
-      - run: yarn install
+      - run:
+          name: install-npm-wee
+          command: npm install
 
       - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
           paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+            - ./node_modules
 
-      # run tests!
-      - run: yarn test
+      - run:
+          name: test
+          command: npm test
