--- a/app/package.json
+++ b/app/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-	"test": "node ./bin/www",
-    "start": "node ./bin/www"
+	"test": "npm run lint && npm run cover",
+	"lint": "eslint *.js",
+	"_comment": "istanbulコマンドでmochaも実行している",
+	"cover": "NODE_ENV=test istanbul cover --report text _mocha",
+	"mocha": "NODE_ENV=test mocha",
+	"start": "node ./bin/www"
   },
-  "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+  "devDependencies": {
+	"eslint": "^2.5.3",
+	"istanbul": "^0.4.3",
+	"mocha": "^2.4.5",
+	"should": "^8.3.0"
   }
 }
