--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -1,36 +1,37 @@
-# Javascript Node CircleCI 2.0 configuration file
+# PHP CircleCI 2.0 configuration file
 #
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+# Check https://circleci.com/docs/2.0/language-php/ for more details
 #
 version: 2
 jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:4.2.6
-
+      - image: circleci/php:7.1.5-browsers
+      
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
+      # - image: circleci/mysql:9.4
 
-    working_directory: ~/app/
+    working_directory: ~/repo
 
     steps:
       - checkout
 
+      # Download and cache dependencies
       - restore_cache:
-        key: dependency-cache-{{ checksum "package.json" }}
+          keys:
+          - v1-dependencies-{{ checksum "composer.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
 
-      - run:
-          name: install-npm-wee
-          command: npm install
+      - run: composer install -n --prefer-dist
 
       - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
           paths:
-            - ./node_modules
-
-      - run:
-          name: test
-          command: npm test
+            - ./vendor
+          key: v1-dependencies-{{ checksum "composer.json" }}
+        
+      # run tests!
+      - run: phpunit
