--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -4,35 +4,61 @@
 #
 version: 2
 jobs:
-  build:
+  build-job:
     docker:
-      # specify the version you desire here
-      - image: circleci/php:7.1.5-browsers
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mysql:9.4
-
+      - image: centos:7
     working_directory: ~/repo
-
     steps:
       - checkout
-
       # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "composer.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
-      - run: composer install -n --prefer-dist
-
+      # install make
+      - run: yum -y install make
+      # install git
+      - run: yum -y install git
+      # install php
+      - run: yum -y install php-pear php-devel gcc ImageMagick ImageMagick-devel ImageMagick-perl
+      # install composer
+      - run: php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+      - run: php composer-setup.php --filename=composer
+      - run: ./composer install -n --prefer-dist
+      # install Imagick
+      - run: pecl install imagick
+      - run: echo "extension=imagick.so" >> /etc/php.ini
       - save_cache:
           paths:
             - ./vendor
           key: v1-dependencies-{{ checksum "composer.json" }}
-        
       # run tests!
-      - run: phpunit
-      
+      - run: ./vendor/bin/phpunit
+  # deployer
+  deploy-job:
+    docker:
+      - image: centos:7
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "ea:1f:c2:14:cf:e7:98:91:6c:e9:8c:e9:07:11:3a:a7"
+      - run: echo "User yuto" >> $HOME/.ssh/config
+      - run: echo "ForwardAgent yes" >> $HOME/.ssh/config
+      - run: yum -y install php-pear php-devel
+      - run: curl -LO https://deployer.org/releases/v3.0.11/deployer.phar
+      - run: mv deployer.phar dep
+      - run: chmod +x ./dep
+      - run: ./dep deploy production
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build-job
+      - deploy-job:
+          requires:
+            - build-job
+          filters:
+            branches:
+              only: master
